--- a/scripts/export.cmake.in
+++ b/scripts/export.cmake.in
@@ -58,8 +58,8 @@ set(EN_XCH_0 ${EN_XCH_0})
 set(EN_XCH_1 ${EN_XCH_1})
 set(TLBS_S ${TLBS_S})
 set(TLBS_A ${TLBS_A})
-set(TLBL_S ${TLBL_S})
-set(TLBL_A ${TLBL_A})
+set(TLBD_S ${TLBD_S})
+set(TLBD_A ${TLBD_A})
 set(TLBL_BITS ${TLBL_BITS})
 set(TLBS_BITS ${TLBS_BITS})
 set(N_TLB_ACTV ${N_TLB_ACTV})
