--- a/scripts/flow_comp.tcl.in
+++ b/scripts/flow_comp.tcl.in
@@ -57,7 +57,7 @@ puts "[color $clr_flow "** Shell post route phys_opt_design completed"]"
 puts "[color $clr_flow "**"]"
 write_checkpoint -force "$dcp_dir/shell_routed.dcp"
 
-report_utilization -file "$rprt_dir/shell_utilization.rpt"
+report_utilization -hierarchical -file "$rprt_dir/shell_utilization.rpt"
 report_route_status -file "$rprt_dir/shell_route_status.rpt"
 report_timing_summary -file "$rprt_dir/shell_timing_summary.rpt"
 report_drc -ruledeck bitstream_checks -name cyt_top -file "$rprt_dir/shell_drc_bitstream_checks.rpt"
