--- a/scripts/synth_shell.tcl.in
+++ b/scripts/synth_shell.tcl.in
@@ -12,7 +12,7 @@ launch_runs -jobs $cfg(cores) -verbose synth_1
 wait_on_run synth_1
 open_run synth_1
 write_checkpoint -force "$dcp_dir/shell/shell_synthed.dcp"
-report_utilization -file "$rprt_dir/shell/shell_synthed.rpt"
+report_utilization -hierarchical -file "$rprt_dir/shell/shell_synthed.rpt"
 
 ########################################################################################################
 # SHELL LAYER SYNTHESIZED
