--- a/scripts/synth_static.tcl.in
+++ b/scripts/synth_static.tcl.in
@@ -11,7 +11,7 @@ launch_runs -jobs $cfg(cores) -verbose synth_1
 wait_on_run synth_1
 open_run synth_1
 write_checkpoint -force "$dcp_dir/static/static_synthed.dcp"
-report_utilization -file "$rprt_dir/static/static_synthed.rpt"
+report_utilization -hierarchical -file "$rprt_dir/static/static_synthed.rpt"
 
 ########################################################################################################
 # STATIC LAYER SYNTHESIZED
