--- a/scripts/synth_user.tcl.in
+++ b/scripts/synth_user.tcl.in
@@ -15,7 +15,7 @@ for {set i 0}  {$i < $cfg(n_config)} {incr i} {
         wait_on_run synth_1
         open_run synth_1
         write_checkpoint -force "$dcp_dir/config_$i/user_synthed_c$i\_$j.dcp"
-        report_utilization -file "$rprt_dir/config_$i/user_synthed_c$i\_$j.rpt"
+        report_utilization -hierarchical -file "$rprt_dir/config_$i/user_synthed_c$i\_$j.rpt"
 
         close_project
         puts "[color $clr_flow "** vFPGA_C$i\_$j synthesized"]"
